# hlop

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  Tutorial.md  build-hip.sh  build.sh
cmake/: dependencies.cmake
cmake/configs/: resources.h.in
cmake/template/: resources.h.in  uninstall.cmake.in
resources/: param.csv  param_bw_all.csv  param_lat_all.csv  东方超算N-Hop参数.csv  东方超算小规模bcast成本.csv
resources/params/: param_bw_all_1753678065.csv  param_bw_all_1753968238.csv  param_lat_all.csv  param_lat_all_1753370365.csv  param_lat_all_1753373129.csv  param_lat_all_1753952210.csv  param_lat_ib.csv
src/: CMakeLists.txt
src/coll/: CMakeLists.txt  allgather.cpp  allreduce.cpp  alltoall.cpp  bcast.cpp  collective.cpp  gather.cpp  reduce.cpp  scatter.cpp
src/coll/struct/: comm_pair.cpp  node_list.cpp  type.cpp
src/coll/structs/: comm_pair.cpp  node_list.cpp  types.cpp
src/include/coll/: allgather.h  allreduce.h  alltoall.h  bcast.h  collective.h  gather.h  reduce.h  scatter.h
src/include/coll/struct/: comm_pair.h  node_list.h  type.h
src/include/coll/structs/: comm_pair.h  node_list.h  types.h
src/include/main/: main.h
src/include/platform/: platform.h
src/include/platform/node/: df_node.h  df_node_parser.h  node.h  th_node.h
src/include/platform/param/: param.h
src/include/util/: aux.h  err.h  fit.h  m_debug.h  msg.h
src/main/: CMakeLists.txt  main.cpp
src/platform/: CMakeLists.txt  platform.cpp
src/platform/node/: df_node.cpp  df_node_parser.cpp  node.cpp  th_node.cpp
src/platform/param/: param.cpp
src/util/: CMakeLists.txt  aux.cpp  fit.cpp
tests/: CMakeLists.txt  test_allgather.cpp  test_bcast.cpp  test_coll_aux.cpp  test_comm_pair.cpp  test_node_list.cpp  test_node_parser.cpp  test_param.cpp  test_scatter.cpp  test_type.cpp  test_types.cpp  test_util.cpp
